data/ts-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"name":"ts-policy","namespace":"test"},"spec":{"egress":[{"to":[{"namespaceSelector":{"matchLabels":{"role":"admin"}}},{"podSelector":{"matchLabels":{"run":"teastore-locust"}}},{"podSelector":{"matchLabels":{"app":"teastore"}}}]}],"ingress":[{"from":[{"podSelector":{"matchLabels":{"run":"teastore-locust"}}},{"podSelector":{"matchLabels":{"app":"teastore"}}}]}],"podSelector":{"matchLabels":{"app":"teast [...]
  creationTimestamp: "2023-12-18T12:10:39Z"
  generation: 1
  name: ts-policy
  namespace: test
  resourceVersion: "4059047"
  uid: 81386800-67a8-4473-a759-6b7333fff171
spec:
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          role: admin
    - podSelector:
        matchLabels:
          run: teastore-locust
    - podSelector:
        matchLabels:
          app: teastore
  ingress:
  - from:
    - podSelector:
        matchLabels:
          run: teastore-locust
    - podSelector:
        matchLabels:
          app: teastore
  podSelector:
    matchLabels:
      app: teastore
  policyTypes:
  - Egress
  - Ingress
